FEATURE: OBS-D1 produce typed pipeline diagnostics